[package]
name = "myne"
version = "1.0.0"
description = "Myne — Your personal space"
authors = []
edition = "2021"
default-run = "myne"

[lib]
name = "myne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "myne"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
